[gd_scene load_steps=34 format=3 uid="uid://cfky14kqdiaip"]

[ext_resource type="Script" uid="uid://b8fdecxsbgnkt" path="res://scripts/main.gd" id="1_o6xl0"]
[ext_resource type="Texture2D" uid="uid://34hrf8e1133j" path="res://assets/balorbgd.png" id="2_0u6et"]
[ext_resource type="Script" uid="uid://deece2n3be13j" path="res://scripts/camera_2d.gd" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://ui7mqm2fu84" path="res://scripts/superobject.gd" id="6_tipki"]
[ext_resource type="Texture2D" uid="uid://b460bftf2qdvg" path="res://assets/guy.webp" id="8_85g3d"]
[ext_resource type="Texture2D" uid="uid://rqi843p6020k" path="res://assets/balorassets.png" id="8_jsxby"]
[ext_resource type="PackedScene" uid="uid://uo6dv83abgou" path="res://scenes/object.tscn" id="8_tipki"]
[ext_resource type="Script" uid="uid://b1ynydlgqgu7r" path="res://scripts/toggle.gd" id="8_x5jvf"]
[ext_resource type="PackedScene" uid="uid://dmhbi4o8yoxv0" path="res://scenes/balloon.tscn" id="9_choun"]
[ext_resource type="Texture2D" uid="uid://7lb800gx164e" path="res://assets/inventoryclosed.png" id="9_ya4ey"]
[ext_resource type="Texture2D" uid="uid://csmsliywm7i8x" path="res://assets/inventoryopen.png" id="10_eb6dy"]
[ext_resource type="Script" uid="uid://d1dpqgf6k35ic" path="res://scripts/inventory_button.gd" id="11_eb6dy"]
[ext_resource type="PackedScene" uid="uid://du30dojv7fowx" path="res://scenes/inventory.tscn" id="11_ya4ey"]
[ext_resource type="AudioStream" uid="uid://lcdstposwu2w" path="res://assets/Knife.mp3" id="13_trceg"]
[ext_resource type="Script" uid="uid://pjnd033clubd" path="res://scenes/portal.gd" id="14_jkv2x"]
[ext_resource type="Texture2D" uid="uid://bjn8vq77vft6i" path="res://assets/Portal.png" id="15_jbj1t"]
[ext_resource type="AudioStream" uid="uid://tb4pn85ysn5i" path="res://assets/attent irish 2.mp3" id="16_0u6et"]
[ext_resource type="AudioStream" uid="uid://cco18nustn5bq" path="res://assets/win.mp3" id="17_x5jvf"]
[ext_resource type="AudioStream" uid="uid://dd7mnc5mrmwkw" path="res://assets/good click.mp3" id="18_qkcr3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_choun"]
atlas = ExtResource("8_85g3d")
region = Rect2(0, 0, 330, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya4ey"]
atlas = ExtResource("8_85g3d")
region = Rect2(330, 0, 330, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb6dy"]
atlas = ExtResource("8_85g3d")
region = Rect2(660, 0, 330, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_trceg"]
atlas = ExtResource("8_85g3d")
region = Rect2(0, 350, 330, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8y0u"]
atlas = ExtResource("8_85g3d")
region = Rect2(330, 350, 330, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkv2x"]
atlas = ExtResource("8_85g3d")
region = Rect2(660, 350, 330, 350)

[sub_resource type="SpriteFrames" id="SpriteFrames_jbj1t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_choun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya4ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb6dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trceg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8y0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkv2x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1u04e"]
atlas = ExtResource("8_jsxby")
region = Rect2(0, 0, 1153, 1370)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5n8i"]
atlas = ExtResource("8_jsxby")
region = Rect2(1153, 0, 1153, 1370)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u6et"]
atlas = ExtResource("8_jsxby")
region = Rect2(2306, 0, 1153, 1370)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5jvf"]
atlas = ExtResource("8_jsxby")
region = Rect2(3459, 0, 1153, 1370)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkcr3"]
atlas = ExtResource("8_jsxby")
region = Rect2(4612, 0, 1153, 1370)

[sub_resource type="SpriteFrames" id="SpriteFrames_gqmmt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u04e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5n8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u6et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5jvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkcr3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muem4"]
size = Vector2(407, 646)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_o6xl0")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("2_0u6et")

[node name="CameraManager" type="Node2D" parent="."]
script = ExtResource("4_jyhfs")

[node name="Camera2D" type="Camera2D" parent="CameraManager"]
position = Vector2(957, 539)

[node name="Inventory Button" type="TextureButton" parent="CameraManager/Camera2D"]
offset_left = 616.0
offset_top = 228.0
offset_right = 969.0
offset_bottom = 547.0
toggle_mode = true
texture_normal = ExtResource("9_ya4ey")
texture_pressed = ExtResource("10_eb6dy")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("11_eb6dy")

[node name="Inventory" parent="CameraManager/Camera2D" instance=ExtResource("11_ya4ey")]
visible = false
offset_left = 195.0
offset_top = -567.0
offset_right = 1182.0
offset_bottom = 337.0

[node name="Toggle" type="Button" parent="."]
offset_left = -4.0
offset_top = 365.0
offset_right = 91.0
offset_bottom = 630.0
script = ExtResource("8_x5jvf")

[node name="Dialogue" parent="." instance=ExtResource("9_choun")]
skip_action = &"ui_accept"

[node name="Objects" type="Node" parent="."]
script = ExtResource("6_tipki")

[node name="Object3" parent="Objects" instance=ExtResource("8_tipki")]
position = Vector2(423, 145)

[node name="Object" parent="Objects" instance=ExtResource("8_tipki")]
position = Vector2(851, 272)

[node name="Object2" parent="Objects" instance=ExtResource("8_tipki")]
position = Vector2(1262, 200)

[node name="Object4" parent="Objects" instance=ExtResource("8_tipki")]
position = Vector2(728, 556)

[node name="Object5" parent="Objects" instance=ExtResource("8_tipki")]
position = Vector2(1199, 463)

[node name="Character" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1617, 591)
scale = Vector2(2.374, 2.235)
sprite_frames = SubResource("SpriteFrames_jbj1t")

[node name="Animation Buffer" type="AnimatedSprite2D" parent="."]
position = Vector2(524, 2459)
sprite_frames = SubResource("SpriteFrames_gqmmt")

[node name="Sound Buffers" type="Node" parent="."]

[node name="Object1AudioBuffer" type="AudioStreamPlayer" parent="Sound Buffers"]
stream = ExtResource("13_trceg")

[node name="Object2AudioBuffer" type="AudioStreamPlayer" parent="Sound Buffers"]
stream = ExtResource("13_trceg")

[node name="Object3AudioBuffer" type="AudioStreamPlayer" parent="Sound Buffers"]
stream = ExtResource("13_trceg")

[node name="Object4AudioBuffer" type="AudioStreamPlayer" parent="Sound Buffers"]
stream = ExtResource("13_trceg")

[node name="Object5AudioBuffer" type="AudioStreamPlayer" parent="Sound Buffers"]
stream = ExtResource("13_trceg")

[node name="Filepath" type="Label" parent="."]
offset_left = 1098.0
offset_top = 2106.0
offset_right = 1138.0
offset_bottom = 2129.0
text = "res://test.dialogue"

[node name="Portal" type="Area2D" parent="."]
visible = false
position = Vector2(952, 477)
script = ExtResource("14_jkv2x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
position = Vector2(-4.5, 56)
shape = SubResource("RectangleShape2D_muem4")

[node name="Sprite2D" type="Sprite2D" parent="Portal"]
position = Vector2(-1.00003, 66)
scale = Vector2(0.33374, 0.362793)
texture = ExtResource("15_jbj1t")

[node name="Background Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_0u6et")
volume_db = -16.865
autoplay = true
parameters/looping = true

[node name="Win Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_x5jvf")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_qkcr3")
volume_db = -14.991

[connection signal="toggled" from="CameraManager/Camera2D/Inventory Button" to="." method="_on_inventory_button_toggled"]
[connection signal="toggled" from="CameraManager/Camera2D/Inventory Button" to="CameraManager/Camera2D/Inventory Button" method="_on_toggled"]
[connection signal="localHide" from="Toggle" to="." method="_on_toggle_local_hide"]
[connection signal="localHide" from="Toggle" to="CameraManager" method="_on_toggle_local_hide"]
[connection signal="localHide" from="Toggle" to="Dialogue" method="_on_toggle_local_hide"]
[connection signal="localShow" from="Toggle" to="." method="_on_toggle_local_show"]
[connection signal="localShow" from="Toggle" to="CameraManager" method="_on_toggle_local_show"]
[connection signal="localShow" from="Toggle" to="Dialogue" method="_on_toggle_local_show"]
[connection signal="pressed" from="Toggle" to="Toggle" method="_on_pressed"]
